Update hero title to Hi I'm Ruxi

--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
         <div class="container">
             <div class="glass-dark hero-card">
                 <div class="hero-icon animate-float">👋</div>
-                <h2 class="hero-title">Welcome to My Space</h2>
+                <h2 class="hero-title">Hi I'm Ruxi</h2>
                 <p class="hero-text">Exploring creativity, sharing thoughts, and connecting ideas</p>
                 <div class="button-group">
                     <a href="#gallery" class="glass btn">Explore Gallery</a>
