--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
             <div class="glass-dark hero-card">
                 <div class="hero-icon animate-float">👋</div>
                 <h2 class="hero-title">Hi I'm Ruxi</h2>
-                <p class="hero-text">people, places and other fun stuff</p>
+                <p class="hero-text">People, places and fun stuff!!</p>
                 <div class="button-group">
                     <a href="#gallery" class="glass btn">Explore Gallery</a>
                     <a href="#blog" class="glass btn">Read Blog</a>
