Redesign site with abstract earth-tone aesthetic - organic shapes, warm browns, cream and charcoal colors

--- a/index.html
+++ b/index.html
@@ -12,22 +12,24 @@
         }
 
         :root {
-            --beige-50: #FDFBF7;
-            --beige-100: #F9F6F0;
-            --beige-200: #F5F5DC;
-            --beige-300: #E8E8E8;
-            --beige-400: #D3D3D3;
-            --beige-500: #C8C8B8;
-            --beige-600: #A8A898;
-            --beige-700: #888878;
-            --beige-800: #686858;
-            --beige-900: #484838;
+            --cream: #F5EDE0;
+            --cream-light: #FAF7F2;
+            --tan: #D4B896;
+            --tan-dark: #C4A882;
+            --brown: #8B5A3C;
+            --brown-rich: #6B3D2E;
+            --terracotta: #A0522D;
+            --charcoal: #2C2C2C;
+            --charcoal-light: #3D3D3D;
+            --black: #1A1A1A;
         }
 
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+            font-family: 'Segoe UI', -apple-system, BlinkMacSystemFont, Roboto, 'Helvetica Neue', Arial, sans-serif;
             line-height: 1.6;
-            color: var(--beige-900);
+            color: var(--charcoal);
+            background: var(--cream-light);
+            overflow-x: hidden;
         }
 
         .container {
@@ -37,29 +39,69 @@
         }
 
         .gradient-bg {
-            background: linear-gradient(135deg, var(--beige-100) 0%, var(--beige-300) 50%, var(--beige-200) 100%);
+            background: var(--cream-light);
             min-height: 100vh;
+            position: relative;
+        }
+
+        /* Organic blob backgrounds */
+        .gradient-bg::before {
+            content: '';
+            position: fixed;
+            top: -20%;
+            right: -10%;
+            width: 60%;
+            height: 70%;
+            background: radial-gradient(ellipse at center, var(--tan) 0%, transparent 70%);
+            opacity: 0.3;
+            border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%;
+            z-index: 0;
+            animation: morphBlob 15s ease-in-out infinite;
+        }
+
+        .gradient-bg::after {
+            content: '';
+            position: fixed;
+            bottom: -10%;
+            left: -15%;
+            width: 50%;
+            height: 60%;
+            background: radial-gradient(ellipse at center, var(--brown) 0%, transparent 70%);
+            opacity: 0.15;
+            border-radius: 40% 60% 70% 30% / 40% 50% 60% 50%;
+            z-index: 0;
+            animation: morphBlob2 18s ease-in-out infinite;
+        }
+
+        @keyframes morphBlob {
+            0%, 100% { border-radius: 60% 40% 30% 70% / 60% 30% 70% 40%; transform: rotate(0deg); }
+            50% { border-radius: 30% 60% 70% 40% / 50% 60% 30% 60%; transform: rotate(10deg); }
+        }
+
+        @keyframes morphBlob2 {
+            0%, 100% { border-radius: 40% 60% 70% 30% / 40% 50% 60% 50%; transform: rotate(0deg); }
+            50% { border-radius: 60% 40% 30% 70% / 60% 30% 50% 40%; transform: rotate(-10deg); }
         }
 
         html {
             scroll-behavior: smooth;
         }
 
-        /* Glass morphism effects */
+        /* Glass morphism effects - earth tone style */
         .glass {
-            background: rgba(245, 245, 220, 0.3);
-            backdrop-filter: blur(10px);
-            -webkit-backdrop-filter: blur(10px);
-            border: 2px solid rgba(204, 85, 0, 0.6);
-            box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.3), 0 4px 6px rgba(0, 0, 0, 0.05);
+            background: rgba(245, 237, 224, 0.7);
+            backdrop-filter: blur(12px);
+            -webkit-backdrop-filter: blur(12px);
+            border: 1px solid rgba(139, 90, 60, 0.2);
+            box-shadow: 0 8px 32px rgba(44, 44, 44, 0.1);
         }
 
         .glass-dark {
-            background: rgba(200, 200, 184, 0.2);
+            background: rgba(44, 44, 44, 0.85);
             backdrop-filter: blur(15px);
             -webkit-backdrop-filter: blur(15px);
-            border: 2px solid rgba(204, 85, 0, 0.6);
-            box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.3), 0 4px 6px rgba(0, 0, 0, 0.05);
+            border: 1px solid rgba(212, 184, 150, 0.3);
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
         }
 
         /* Navigation */
@@ -69,12 +111,12 @@
             left: 0;
             right: 0;
             z-index: 1000;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            transition: box-shadow 0.3s ease;
+            box-shadow: 0 4px 20px rgba(44, 44, 44, 0.1);
+            transition: all 0.3s ease;
         }
 
         nav.shadow-2xl {
-            box-shadow: 0 25px 50px rgba(0, 0, 0, 0.25);
+            box-shadow: 0 8px 40px rgba(44, 44, 44, 0.15);
         }
 
         .nav-content {
@@ -87,7 +129,7 @@
         .nav-brand {
             font-size: 1.5rem;
             font-weight: bold;
-            color: var(--beige-900);
+            color: var(--brown-rich);
         }
 
         .nav-links {
@@ -97,13 +139,30 @@
         }
 
         .nav-links a {
-            color: var(--beige-800);
+            color: var(--charcoal);
             text-decoration: none;
             transition: color 0.3s ease;
+            font-weight: 500;
+            position: relative;
+        }
+
+        .nav-links a::after {
+            content: '';
+            position: absolute;
+            bottom: -4px;
+            left: 0;
+            width: 0;
+            height: 2px;
+            background: var(--terracotta);
+            transition: width 0.3s ease;
+        }
+
+        .nav-links a:hover::after {
+            width: 100%;
         }
 
         .nav-links a:hover {
-            color: var(--beige-600);
+            color: var(--terracotta);
         }
 
         .mobile-menu-btn {
@@ -111,7 +170,7 @@
             background: none;
             border: none;
             cursor: pointer;
-            color: var(--beige-800);
+            color: var(--charcoal);
         }
 
         .mobile-menu {
@@ -126,19 +185,21 @@
         }
 
         .mobile-menu a {
-            color: var(--beige-800);
+            color: var(--charcoal);
             text-decoration: none;
             padding: 0.5rem 0;
             transition: color 0.3s ease;
         }
 
         .mobile-menu a:hover {
-            color: var(--beige-600);
+            color: var(--terracotta);
         }
 
         /* Sections */
         section {
             padding: 5rem 1.5rem;
+            position: relative;
+            z-index: 1;
         }
 
         .section-header {
@@ -149,13 +210,13 @@
         .section-title {
             font-size: 2.5rem;
             font-weight: bold;
-            color: var(--beige-900);
+            color: var(--charcoal);
             margin-bottom: 1rem;
         }
 
         .section-subtitle {
             font-size: 1.125rem;
-            color: var(--beige-700);
+            color: var(--brown);
         }
 
         /* Hero Section */
@@ -165,38 +226,58 @@
         }
 
         .hero-card {
-            border-radius: 1.5rem;
+            border-radius: 2rem;
             padding: 3rem;
             max-width: 56rem;
             margin: 0 auto;
             text-align: center;
-            border: 2px solid rgba(204, 85, 0, 0.6);
-            box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.3), 0 4px 6px rgba(0, 0, 0, 0.05);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .hero-card::before {
+            content: '';
+            position: absolute;
+            top: -50%;
+            right: -30%;
+            width: 60%;
+            height: 100%;
+            background: radial-gradient(ellipse at center, var(--tan) 0%, transparent 70%);
+            opacity: 0.4;
+            border-radius: 50%;
+            z-index: 0;
         }
 
         .hero-icon {
             width: 8rem;
             height: 8rem;
-            background: var(--beige-300);
+            background: linear-gradient(135deg, var(--tan) 0%, var(--brown) 100%);
             border-radius: 50%;
             margin: 0 auto 1.5rem;
             display: flex;
             align-items: center;
             justify-content: center;
             font-size: 3rem;
+            position: relative;
+            z-index: 1;
+            box-shadow: 0 10px 30px rgba(139, 90, 60, 0.3);
         }
 
         .hero-title {
             font-size: 3rem;
             font-weight: bold;
-            color: var(--beige-900);
+            color: var(--cream-light);
             margin-bottom: 1rem;
+            position: relative;
+            z-index: 1;
         }
 
         .hero-text {
             font-size: 1.25rem;
-            color: var(--beige-700);
+            color: var(--tan);
             margin-bottom: 2rem;
+            position: relative;
+            z-index: 1;
         }
 
         .button-group {
@@ -204,20 +285,26 @@
             justify-content: center;
             gap: 1rem;
             flex-wrap: wrap;
+            position: relative;
+            z-index: 1;
         }
 
         .btn {
             padding: 0.75rem 2rem;
             border-radius: 9999px;
             text-decoration: none;
-            color: var(--beige-900);
+            color: var(--charcoal);
             font-weight: 600;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            transition: all 0.3s ease;
+            background: rgba(245, 237, 224, 0.9);
+            border: 1px solid rgba(139, 90, 60, 0.3);
         }
 
         .btn:hover {
             transform: translateY(-5px);
-            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 10px 25px rgba(139, 90, 60, 0.2);
+            background: var(--tan);
+            color: var(--charcoal);
         }
 
         /* Grid Layouts */
@@ -246,20 +333,20 @@
         .gallery-item {
             position: relative;
             overflow: hidden;
-            border-radius: 1rem;
+            border-radius: 1.5rem;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
-            border: 2px solid rgba(204, 85, 0, 0.6);
-            box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.3), 0 4px 6px rgba(0, 0, 0, 0.05);
+            border: none;
+            box-shadow: 0 8px 30px rgba(44, 44, 44, 0.1);
         }
 
         .gallery-item:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+            transform: translateY(-8px) scale(1.02);
+            box-shadow: 0 20px 40px rgba(139, 90, 60, 0.2);
         }
 
         .gallery-image {
             aspect-ratio: 1 / 1;
-            background: linear-gradient(135deg, var(--beige-200), var(--beige-400));
+            background: linear-gradient(135deg, var(--tan) 0%, var(--brown) 50%, var(--charcoal) 100%);
             display: flex;
             align-items: center;
             justify-content: center;
@@ -273,7 +360,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: linear-gradient(180deg, transparent 0%, rgba(0, 0, 0, 0.7) 100%);
+            background: linear-gradient(180deg, transparent 0%, rgba(26, 26, 26, 0.8) 100%);
             opacity: 0;
             transition: opacity 0.3s ease;
         }
@@ -311,14 +398,16 @@
 
         /* Blog Cards */
         .blog-card {
-            border-radius: 1rem;
-            padding: 1.5rem;
+            border-radius: 1.5rem;
+            padding: 2rem;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
+            background: rgba(245, 237, 224, 0.6);
+            border: 1px solid rgba(139, 90, 60, 0.15);
         }
 
         .blog-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+            transform: translateY(-8px);
+            box-shadow: 0 15px 35px rgba(139, 90, 60, 0.15);
         }
 
         .blog-icon {
@@ -328,24 +417,24 @@
 
         .blog-date {
             font-size: 0.875rem;
-            color: var(--beige-600);
+            color: var(--brown);
             margin-bottom: 0.5rem;
         }
 
         .blog-title {
             font-size: 1.5rem;
             font-weight: bold;
-            color: var(--beige-900);
+            color: var(--charcoal);
             margin-bottom: 0.75rem;
         }
 
         .blog-text {
-            color: var(--beige-700);
+            color: var(--charcoal-light);
             margin-bottom: 1rem;
         }
 
         .blog-link {
-            color: var(--beige-800);
+            color: var(--terracotta);
             font-weight: 600;
             text-decoration: none;
             display: inline-flex;
@@ -355,19 +444,21 @@
         }
 
         .blog-link:hover {
-            color: var(--beige-600);
+            color: var(--brown-rich);
         }
 
         /* Link Cards */
         .link-card {
-            border-radius: 1rem;
-            padding: 1.5rem;
+            border-radius: 1.5rem;
+            padding: 2rem;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
+            background: rgba(245, 237, 224, 0.6);
+            border: 1px solid rgba(139, 90, 60, 0.15);
         }
 
         .link-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+            transform: translateY(-8px);
+            box-shadow: 0 15px 35px rgba(139, 90, 60, 0.15);
         }
 
         .link-icon {
@@ -378,7 +469,7 @@
         .link-title {
             font-size: 1.25rem;
             font-weight: bold;
-            color: var(--beige-900);
+            color: var(--charcoal);
             margin-bottom: 0.75rem;
         }
 
@@ -391,19 +482,22 @@
         }
 
         .link-list a {
-            color: var(--beige-700);
+            color: var(--brown);
             text-decoration: none;
             transition: color 0.3s ease;
         }
 
         .link-list a:hover {
-            color: var(--beige-900);
+            color: var(--terracotta);
         }
 
         /* Footer */
         footer {
             padding: 2rem 1.5rem;
             margin-top: 5rem;
+            position: relative;
+            z-index: 1;
+            background: var(--charcoal);
         }
 
         .footer-content {
@@ -411,7 +505,7 @@
         }
 
         .footer-text {
-            color: var(--beige-700);
+            color: var(--tan);
             margin-bottom: 1rem;
         }
 
@@ -422,12 +516,12 @@
         }
 
         .social-links a {
-            color: var(--beige-700);
+            color: var(--tan);
             transition: color 0.3s ease;
         }
 
         .social-links a:hover {
-            color: var(--beige-900);
+            color: var(--cream);
         }
 
         .social-icon {
@@ -519,21 +613,41 @@
                 grid-template-columns: repeat(4, minmax(0, 1fr));
             }
         }
-        /* Bubble Letter Headings with Shine */
+
+        /* Elegant Typography */
         h1, h2, h3 {
-            color: #4E342E !important;
-            font-family: 'Comic Sans MS', 'Marker Felt', 'Chalkboard SE', cursive !important;
-            font-weight: 900 !important;
-            letter-spacing: 0.08em !important;
-            text-shadow: 
-                3px 3px 0px #795548,
-                5px 5px 0px #5D4037,
-                7px 7px 0px #4E342E,
-                2px 2px 15px rgba(255, 255, 255, 0.6),
-                -2px -2px 5px rgba(255, 255, 255, 0.9),
-                inset 0 0 10px rgba(255, 255, 255, 0.5) !important;
-            padding: 0.3em 0.5em !important;
-            border-radius: 40px !important;
+            font-family: 'Georgia', 'Times New Roman', serif;
+            font-weight: 700;
+            letter-spacing: 0.02em;
+        }
+
+        .nav-brand {
+            font-family: 'Georgia', 'Times New Roman', serif;
+            color: var(--brown-rich) !important;
+            text-shadow: none !important;
+        }
+
+        .section-title {
+            color: var(--charcoal) !important;
+            text-shadow: none !important;
+            padding: 0 !important;
+        }
+
+        .hero-title {
+            color: var(--cream-light) !important;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3) !important;
+            padding: 0 !important;
+        }
+
+        .blog-title, .link-title {
+            color: var(--charcoal) !important;
+            text-shadow: none !important;
+            padding: 0 !important;
+        }
+
+        .overlay-text h3 {
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5) !important;
+            padding: 0 !important;
         }
     </style>
 </head>
