--- a/index.html
+++ b/index.html
@@ -267,8 +267,8 @@
         }
 
         .hero-icon {
-            width: 8rem;
-            height: 8rem;
+            width: 10rem;
+            height: 10rem;
             background: linear-gradient(135deg, var(--tan) 0%, var(--brown) 100%);
             border-radius: 50%;
             margin: 0 auto 1.5rem;
@@ -279,6 +279,15 @@
             position: relative;
             z-index: 1;
             box-shadow: 0 10px 30px rgba(139, 90, 60, 0.3);
+            overflow: hidden;
+            border: 4px solid var(--tan);
+        }
+
+        .hero-icon img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center top;
         }
 
         .hero-title {
@@ -786,7 +795,9 @@
     <section id="home" class="section">
         <div class="container">
             <div class="glass-dark hero-card">
-                <div class="hero-icon animate-float">👋</div>
+                <div class="hero-icon animate-float">
+                    <img src="profile.jpg" alt="Ruxi">
+                </div>
                 <h2 class="hero-title">Hi I'm Ruxi</h2>
                 <p class="hero-text">People, places and fun stuff!!</p>
                 <div class="button-group">
