Update subheading to FBI agent joke

--- a/index.html
+++ b/index.html
@@ -799,7 +799,7 @@
                     <img src="profile.jpg" alt="Ruxi">
                 </div>
                 <h2 class="hero-title">Hi I'm Ruxi</h2>
-                <p class="hero-text">People, places and fun stuff!!</p>
+                <p class="hero-text">A glimpse into my life - and my FBI agent's favorite reality show</p>
                 <div class="button-group">
                     <a href="#gallery" class="glass btn">Explore Gallery</a>
                     <a href="#blog" class="glass btn">Read Blog</a>
