Fix world map image extension to jpg

--- a/index.html
+++ b/index.html
@@ -1011,7 +1011,7 @@
             </div>
             <div class="map-container">
                 <div class="map-image-wrapper">
-                    <img src="worldmap.png" alt="World Map" class="map-image">
+                    <img src="worldmap.jpg" alt="World Map" class="map-image">
                     
                     <!-- SVG Overlay for lines and dots -->
                     <svg class="map-overlay" viewBox="0 0 1160 650" preserveAspectRatio="xMidYMid slice">
