Add arrows between location cards with organic abstract styling

--- a/index.html
+++ b/index.html
@@ -678,38 +678,82 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            gap: 1.5rem;
+            align-items: center;
+            gap: 0.5rem;
             margin-top: 2rem;
+            padding: 2rem 0;
+        }
+
+        .location-item {
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
         }
 
         .location-card {
             background: rgba(44, 44, 44, 0.85);
-            border-radius: 1rem;
-            padding: 1.25rem 1.5rem;
+            padding: 0.9rem 1.3rem;
             display: flex;
             align-items: center;
-            gap: 1rem;
+            gap: 0.75rem;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
+            position: relative;
         }
 
+        /* Organic border-radius variations */
+        .location-card:nth-child(1) { border-radius: 40% 60% 55% 45% / 55% 45% 55% 45%; }
+        .location-card:nth-child(2) { border-radius: 55% 45% 40% 60% / 45% 60% 40% 55%; }
+        .location-card:nth-child(3) { border-radius: 45% 55% 60% 40% / 60% 40% 55% 45%; }
+        .location-card:nth-child(4) { border-radius: 60% 40% 45% 55% / 40% 55% 60% 45%; }
+        .location-card:nth-child(5) { border-radius: 50% 50% 40% 60% / 55% 45% 50% 50%; }
+        .location-card:nth-child(6) { border-radius: 35% 65% 50% 50% / 50% 50% 65% 35%; }
+
+        /* Varied transforms for organic feel */
+        .location-item:nth-child(1) .location-card { transform: rotate(-3deg); }
+        .location-item:nth-child(3) .location-card { transform: rotate(2deg) translateY(-8px); }
+        .location-item:nth-child(5) .location-card { transform: rotate(-2deg) translateY(5px); }
+        .location-item:nth-child(7) .location-card { transform: rotate(3deg); }
+        .location-item:nth-child(9) .location-card { transform: rotate(-1deg) translateY(-5px); }
+        .location-item:nth-child(11) .location-card { transform: rotate(2deg) translateY(3px); }
+
         .location-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+            transform: scale(1.08) rotate(0deg) !important;
+            box-shadow: 0 15px 35px rgba(0, 0, 0, 0.25);
+            z-index: 10;
         }
 
         .location-icon {
-            font-size: 2rem;
+            font-size: 1.75rem;
         }
 
         .location-info h4 {
             color: var(--cream);
-            font-size: 1.1rem;
-            margin-bottom: 0.25rem;
+            font-size: 1rem;
+            margin-bottom: 0;
+            white-space: nowrap;
         }
 
         .location-info p {
             color: var(--tan);
             font-size: 0.875rem;
+        }
+
+        .journey-arrow {
+            color: var(--terracotta);
+            font-size: 1.5rem;
+            opacity: 0.7;
+            animation: pulseArrow 2s ease-in-out infinite;
+            transform: rotate(-10deg);
+        }
+
+        .journey-arrow:nth-of-type(2) { animation-delay: 0.3s; transform: rotate(5deg); }
+        .journey-arrow:nth-of-type(3) { animation-delay: 0.6s; transform: rotate(-5deg); }
+        .journey-arrow:nth-of-type(4) { animation-delay: 0.9s; transform: rotate(10deg); }
+        .journey-arrow:nth-of-type(5) { animation-delay: 1.2s; transform: rotate(-3deg); }
+
+        @keyframes pulseArrow {
+            0%, 100% { opacity: 0.5; transform: translateX(0); }
+            50% { opacity: 1; transform: translateX(3px); }
         }
 
         /* Footer */
@@ -1011,40 +1055,57 @@
             </div>
             
             <div class="locations-list">
-                <div class="location-card">
-                    <span class="location-icon">🇮🇳</span>
-                    <div class="location-info">
-                        <h4>Gujarat, India</h4>
+                <div class="location-item">
+                    <div class="location-card">
+                        <span class="location-icon">🇮🇳</span>
+                        <div class="location-info">
+                            <h4>Gujarat, India</h4>
+                        </div>
                     </div>
                 </div>
-                <div class="location-card">
-                    <span class="location-icon">🌰</span>
-                    <div class="location-info">
-                        <h4>Columbus, Ohio</h4>
+                <span class="journey-arrow">→</span>
+                <div class="location-item">
+                    <div class="location-card">
+                        <span class="location-icon">🌰</span>
+                        <div class="location-info">
+                            <h4>Columbus, Ohio</h4>
+                        </div>
                     </div>
                 </div>
-                <div class="location-card">
-                    <span class="location-icon">🏠</span>
-                    <div class="location-info">
-                        <h4>Findlay, Ohio</h4>
+                <span class="journey-arrow">→</span>
+                <div class="location-item">
+                    <div class="location-card">
+                        <span class="location-icon">🏠</span>
+                        <div class="location-info">
+                            <h4>Findlay, Ohio</h4>
+                        </div>
                     </div>
                 </div>
-                <div class="location-card">
-                    <span class="location-icon">☕</span>
-                    <div class="location-info">
-                        <h4>Seattle, Washington</h4>
+                <span class="journey-arrow">→</span>
+                <div class="location-item">
+                    <div class="location-card">
+                        <span class="location-icon">☕</span>
+                        <div class="location-info">
+                            <h4>Seattle, Washington</h4>
+                        </div>
                     </div>
                 </div>
-                <div class="location-card">
-                    <span class="location-icon">🇬🇧</span>
-                    <div class="location-info">
-                        <h4>London, UK</h4>
+                <span class="journey-arrow">→</span>
+                <div class="location-item">
+                    <div class="location-card">
+                        <span class="location-icon">🇬🇧</span>
+                        <div class="location-info">
+                            <h4>London, UK</h4>
+                        </div>
                     </div>
                 </div>
-                <div class="location-card" style="background: var(--terracotta);">
-                    <span class="location-icon">🗽</span>
-                    <div class="location-info">
-                        <h4>New York City</h4>
+                <span class="journey-arrow">→</span>
+                <div class="location-item">
+                    <div class="location-card" style="background: var(--terracotta);">
+                        <span class="location-icon">🗽</span>
+                        <div class="location-info">
+                            <h4>New York City</h4>
+                        </div>
                     </div>
                 </div>
             </div>
