--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             --brown: #8B5A3C;
             --brown-rich: #6B3D2E;
             --terracotta: #A0522D;
-            --charcoal: #2C2C2C;
-            --charcoal-light: #3D3D3D;
+            --charcoal: #3D2317;
+            --charcoal-light: #4A2E1F;
             --black: #1A1A1A;
         }
 
@@ -111,11 +111,11 @@
             backdrop-filter: blur(12px);
             -webkit-backdrop-filter: blur(12px);
             border: 1px solid rgba(139, 90, 60, 0.2);
-            box-shadow: 0 8px 32px rgba(44, 44, 44, 0.1);
+            box-shadow: 0 8px 32px rgba(61, 35, 23, 0.1);
         }
 
         .glass-dark {
-            background: rgba(44, 44, 44, 0.9);
+            background: rgba(61, 35, 23, 0.9);
             backdrop-filter: blur(15px);
             -webkit-backdrop-filter: blur(15px);
             border: 1px solid rgba(212, 184, 150, 0.3);
@@ -129,12 +129,12 @@
             left: 0;
             right: 0;
             z-index: 1000;
-            box-shadow: 0 4px 20px rgba(44, 44, 44, 0.1);
+            box-shadow: 0 4px 20px rgba(61, 35, 23, 0.1);
             transition: all 0.3s ease;
         }
 
         nav.shadow-2xl {
-            box-shadow: 0 8px 40px rgba(44, 44, 44, 0.15);
+            box-shadow: 0 8px 40px rgba(61, 35, 23, 0.15);
         }
 
         .nav-content {
@@ -363,7 +363,7 @@
             border-radius: 1.5rem;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             border: none;
-            box-shadow: 0 8px 30px rgba(44, 44, 44, 0.1);
+            box-shadow: 0 8px 30px rgba(61, 35, 23, 0.1);
         }
 
         .gallery-item:hover {
@@ -691,7 +691,7 @@
         }
 
         .location-card {
-            background: rgba(44, 44, 44, 0.85);
+            background: rgba(61, 35, 23, 0.85);
             padding: 0.9rem 1.3rem;
             display: flex;
             align-items: center;
