--- a/index.html
+++ b/index.html
@@ -693,18 +693,22 @@
 
         .location-card {
             background: rgba(61, 35, 23, 0.85);
-            width: 5.5rem;
-            height: 5.5rem;
+            width: 6rem;
+            height: 6rem;
+            min-width: 6rem;
+            min-height: 6rem;
+            aspect-ratio: 1 / 1;
             border-radius: 50%;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            gap: 0.25rem;
+            gap: 0.2rem;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             position: relative;
             text-align: center;
-            padding: 0.5rem;
+            padding: 0.4rem;
+            overflow: hidden;
         }
 
         /* Varied transforms for organic feel */
